--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -13,11 +13,20 @@
     </head>
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+            <div class="container">
+                <b class="navbar-brand">User items</b>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div th:switch="${userItems.size()}" class="container my-5">
             <div class="col-md-6">
-                <h2 th:case="0">User have no items!</h2>
+                <h2 th:case="0">No items yet!</h2>
                 <div th:case="*">
-                    <h2 class="my-5">User items</h2>
                     <table class="table table-striped table-responsive-md">
                         <thead>
                             <tr>
@@ -43,7 +52,7 @@
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="my-5">Choose item to add</h2>
+                    <h3 class="my-5">Choose item to add</h3>
                 </div>
                 <form action="#" method="post" th:object="${itemTemplateWrapper}" th:action="@{/edit/{id}/items(id=${userId})}">
                     <div class="form-group">
@@ -56,7 +65,6 @@
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary">Add item</button>
-                    <a href="/users" class="btn btn-primary">Back to main</a>
                 </form>
             </div>
         </div>
