--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,35 +11,34 @@
         <title>Users</title>
     </head>
     <body>
-        <div th:switch="${users}" class="container my-5">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 th:case="null">No users yet!</h2>
-                    <div th:case="*">
-                        <h2 class="my-5">Users</h2>
-                        <table class="table table-striped table-responsive-md">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Login</th>
-                                    <th>Params</th>
-                                    <th>Items</th>
-                                    <th>Delete</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="user : ${users}">
-                                    <td th:text="${user.id}"></td>
-                                    <td th:text="${user.login}"></td>
-                                    <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary">Edit<i class="fas fa-user-edit ml-2"></i></a></td>
-                                    <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
-                                    <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>      
-                    <p class="my-5"><a href="/adduser" class="btn btn-primary">Add<i class="fas fa-user-plus ml-2"></i></a></p>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+            <div class="container">
+                <b class="navbar-brand">Users</b>
+            </div>
+        </nav>
+        <div class="container my-5">
+            <div class="col-md-6">
+                <table class="table table-striped table-responsive-md">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Login</th>
+                            <th>Params</th>
+                            <th>Items</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="user : ${users}">
+                            <td th:text="${user.id}"></td>
+                            <td th:text="${user.login}"></td>
+                            <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary">Edit<i class="fas fa-user-edit ml-2"></i></a></td>
+                            <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
+                            <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p class="my-5"><a th:href="${'/adduser'}" class="btn btn-primary">Add<i class="fas fa-user-plus ml-2"></i></a></p>
             </div>
         </div>
     </body>
