--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -15,7 +15,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <b class="navbar-brand">User items</b>
+                <h3 class="navbar-brand">User items</h3>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home</a>
@@ -24,28 +24,26 @@
             </div>
         </nav>
         <div th:switch="${userItems.size()}" class="container my-5">
-            <div class="col-md-6">
-                <h2 th:case="0">No items yet!</h2>
-                <div th:case="*">
-                    <table class="table table-striped table-responsive-md">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Type</th>
-                                <th>Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="item : ${userItems}">
-                                <td th:text="${item.id}"></td>
-                                <td th:text="${item.txt}"></td>
-                                <td th:text="${item.type}"></td>
-                                <td><a th:href="@{/delete/{uId}/items/{iId}(uId=${userId}, iId=${item.id})}" class="btn btn-primary">Remove</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <h2 th:case="0">No items yet!</h2>
+            <div th:case="*" class="col-md-6">
+                <table class="table table-striped table-responsive-md">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Type</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="item : ${userItems}">
+                            <td th:text="${item.id}"></td>
+                            <td th:text="${item.txt}"></td>
+                            <td th:text="${item.type}"></td>
+                            <td><a th:href="@{/delete/{uId}/items/{iId}(uId=${userId}, iId=${item.id})}" class="btn btn-primary">Remove</a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
