--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -13,33 +13,31 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <b class="navbar-brand">Users</b>
+                <h3 class="navbar-brand">Users</h3>
             </div>
         </nav>
         <div class="container my-5">
-            <div class="col-md-6">
-                <table class="table table-striped table-responsive-md">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Login</th>
-                            <th>Params</th>
-                            <th>Items</th>
-                            <th>Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="user : ${users}">
-                            <td th:text="${user.id}"></td>
-                            <td th:text="${user.login}"></td>
-                            <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary">Edit<i class="fas fa-user-edit ml-2"></i></a></td>
-                            <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
-                            <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <p class="my-5"><a th:href="${'/adduser'}" class="btn btn-primary">Add<i class="fas fa-user-plus ml-2"></i></a></p>
-            </div>
+            <table class="table table-striped table-responsive-md">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Login</th>
+                        <th>Params</th>
+                        <th>Items</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="user : ${users}">
+                        <td th:text="${user.id}"></td>
+                        <td th:text="${user.login}"></td>
+                        <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary">Edit<i class="fas fa-user-edit ml-2"></i></a></td>
+                        <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
+                        <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
+                    </tr>
+                </tbody>
+            </table>
+            <p class="my-5"><a th:href="${'/adduser'}" class="btn btn-primary">Add<i class="fas fa-user-plus ml-2"></i></a></p>
         </div>
     </body>
 </html>
