--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -51,7 +51,7 @@
 
         <div class="container my-5">
             <div class="col-md-6">
-                <form action="#" method="post" th:object="${itemTemplateWrapper}" th:action="@{/edit/{id}/items(id=${userId})}">
+                <form action="#" method="post" th:object="${itemTemplateWrapper}" th:action="@{/users/{id}/items(id=${userId})}">
                     <div class="form-group">
                         <label for="item_template" class="col-form-label">Want to add some?</label>
                         <select th:field="${itemTemplateWrapper.item}" id="item_template" class="form-control selectpicker" data-live-search="true">
