--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -30,7 +30,7 @@
                     <tr th:each="user : ${users}">
                         <td th:text="${user.id}"></td>
                         <td><a th:href="@{/edit/{id}(id=${user.id})}" th:text="${user.login}" class="nav-link"></a></td>
-                        <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
+                        <td><a th:href="@{/users/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
                         <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
                     </tr>
                     <tr>
