--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -42,7 +42,7 @@
                             <td><a th:href="@{/edit/items(owner=${userId}, itemId=${item.id})}" th:text="${item.txt}" class="nav-link"></a></td>
                             <td th:text="${item.type}"></td>
                             <td th:text="${item.count}"></td>
-                            <td><a th:href="@{/delete/items/(owner=${userId}, itemId=${item.id})}" class="btn btn-primary">Remove</a></td>
+                            <td><a th:href="@{/delete/items(owner=${userId}, itemId=${item.id})}" class="btn btn-primary">Remove</a></td>
                         </tr>
                     </tbody>
                 </table>
