--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -13,8 +13,12 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <h3 class="navbar-brand">Users</h3>
+                <a class="navbar-brand nav-link" href="/">Users</a>
             </div>
+            <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/users}">
+                <input type="search" class="form-control mr-sm-2" placeholder="Enter login..." aria-label="Search" id="search-input" name="search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </nav>
         <div class="container my-5">
             <table class="table table-hover table-striped table-responsive-md">
