--- a/src/main/resources/templates/update-item.html
+++ b/src/main/resources/templates/update-item.html
@@ -26,22 +26,22 @@
                 <div class="row">
                     <div class="form-group col-md-3">
                         <label for="count" class="col-form-label">Count</label>
-                        <input type="number" min="0" th:readonly="*{count == null}" th:field="*{count}" class="form-control" id="count" placeholder="count">
+                        <input type="number" min="0" th:readonly="*{count == ''}" th:field="*{count}" class="form-control" id="count" placeholder="count">
                         <span th:if="${#fields.hasErrors('count')}" th:errors="*{count}" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-3">
                         <label for="quality" class="col-form-label">Quality</label>
-                        <input type="number" min="0" th:readonly="*{quality == null}" th:field="*{quality}" class="form-control" id="quality" placeholder="quality">
+                        <input type="number" min="0" th:readonly="*{quality == ''}" th:field="*{quality}" class="form-control" id="quality" placeholder="quality">
                         <span th:if="${#fields.hasErrors('quality')}" th:errors="*{quality}" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-3">
                         <label for="maxquality" class="col-form-label">Max quality</label>
-                        <input type="number" min="0" th:readonly="*{maxquality == null}" th:field="*{maxquality}" class="form-control" id="maxquality" placeholder="quality">
+                        <input type="number" min="0" th:readonly="*{maxquality == ''}" th:field="*{maxquality}" class="form-control" id="maxquality" placeholder="max quality">
                         <span th:if="${#fields.hasErrors('maxquality')}" th:errors="*{maxquality}" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-3">
                         <label for="min" class="col-form-label">Min requirements</label>
-                        <input type="text" th:readonly="*{min == null}" th:field="*{min}" class="form-control" id="min" placeholder="min requirements">
+                        <input type="text" th:readonly="*{min == ''}" th:field="*{min}" class="form-control" id="min" placeholder="min requirements">
                         <span th:if="${#fields.hasErrors('min')}" th:errors="*{min}" class="text-danger"></span>
                     </div>
                 </div>
