--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -17,7 +17,7 @@
             </div>
             <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/users}">
                 <input type="search" class="form-control mr-sm-2" placeholder="Enter login..." aria-label="Search" id="search-input" name="search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
             </form>
         </nav>
         <div class="container my-5">
