--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -32,7 +32,7 @@
                             <th>ID</th>
                             <th>Name</th>
                             <th>Type</th>
-                            <th>Pieces</th>
+                            <th>Pcs in stack</th>
                             <th>Delete</th>
                         </tr>
                     </thead>
