--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -26,7 +26,7 @@
             <h2 th:case="0">No items yet!</h2>
             <div th:case="*" class="col-md-8">
                 <h2>User items</h2>
-                <table class="table table-striped table-responsive-md">
+                <table class="table table-hover table-striped table-responsive-md">
                     <thead>
                         <tr>
                             <th>ID</th>
